--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build:client": "vue-cli-service build",
     "build:server": "cross-env WEBPACK_TARGET=node vue-cli-service build",
     "build": "npm run build:server && npm run build:client",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "server": "nodemon src/server.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -26,8 +27,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-xyz": "^1.1.0",
     "express": "^4.17.1",
     "lodash.merge": "^4.6.2",
+    "nodemon": "^2.0.7",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
