--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:server": "cross-env WEBPACK_TARGET=node vue-cli-service build",
     "build": "npm run build:server && npm run build:client",
     "lint": "vue-cli-service lint",
-    "server": "nodemon src/server.js"
+    "server": "nodemon src/server/ssr.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
